--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -4,7 +4,7 @@
  	
 /*For the new Material Design for YouTube*/
 
-/*1.2.8*/
+/*1.2.9*/
 
   /*Changed text highlight*/
   ::selection
@@ -70,13 +70,14 @@
 		background-color: #00ADEE !important;
 		opacity: 0.9 !important;
 	}
-	ytd-button-renderer.style-destructive[is-paper-button]:hover,paper-button.ytd-subscribe-button-renderer:hover,paper-button.ytd-subscribe-button-renderer[subscribed]:hover,.ytp-sb-subscribe, a.ytp-sb-subscribe:hover
+	ytd-button-renderer.style-destructive[is-paper-button]:hover,paper-button.ytd-subscribe-button-renderer:hover,paper-button.ytd-subscribe-button-renderer[subscribed]:hover,.ytp-sb-subscribe, a.ytp-sb-subscribe:hover,.ytp-sb-unsubscribe:hover
 	{
 		opacity: 1 !important;
 	}
-	paper-button.ytd-subscribe-button-renderer[subscribed]
+	paper-button.ytd-subscribe-button-renderer[subscribed],.ytp-sb-unsubscribe
 	{
 		background-color: #333 !important;
+		color: #fff !important;
 		opacity: 0.9 !important;
 	}
 	ytd-button-renderer.style-primary[is-paper-button]
