--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -4,27 +4,27 @@
  	
 /*For the new Material Design for YouTube*/
 
-/*1.3.0*/
+/*1.3.1*/
 
-  /*Main color variable*/
-  :root
-  {
-    --main-color: #00ADEE;
-  }
+	/*Main color variable*/
+	:root
+	{
+		--main-color: #00ADEE;
+	}
 
-  /*Changed text highlight*/
-  ::selection
-  {
-    background: var(--main-color) !important;
-    color: #fff !important;
-  }
-  ::-moz-selection
-  {
-    background: var(--main-color) !important;
-    color: #fff !important;
-  }
+	/*Changed text highlight*/
+	::selection
+	{
+		background: var(--main-color) !important;
+		color: #fff !important;
+	}
+	::-moz-selection
+	{
+		background: var(--main-color) !important;
+		color: #fff !important;
+	}
 
-  /*Background section*/
+	/*Background section*/
 	#like-bar.ytd-sentiment-bar-renderer,#progress.ytd-thumbnail-overlay-resume-playback-renderer,#selectionBar.paper-tabs
 	{
 		background-color: var(--main-color) !important;
@@ -44,7 +44,7 @@
 	}
 	
 	/*Logo*/
-  #logo-icon.ytd-topbar-logo-renderer #tube-paths
+	#logo-icon.ytd-topbar-logo-renderer #tube-paths
 	{
 		fill:var(--main-color) !important;
 	}
@@ -99,7 +99,7 @@
 		opacity: 1 !important;
 	}
 	
-  .badge-style-type-simple.ytd-badge-supported-renderer,.badge-style-type-disabled.ytd-badge-supported-renderer, yt-icon.ytd-badge-supported-renderer
+	.badge-style-type-simple.ytd-badge-supported-renderer,.badge-style-type-disabled.ytd-badge-supported-renderer, yt-icon.ytd-badge-supported-renderer
 	{
 		background: transparent !important;
 		color: var(--main-color) !important;
@@ -107,12 +107,12 @@
 		opacity: .7 !important;
 	}
  	
-  /*Hover section*/
-  #video-title:hover,#byline.ytd-video-meta-block:hover,#author-text.yt-simple-endpoint.ytd-comment-renderer:hover,ytd-button-renderer #button.ytd-button-renderer:hover,.yt-simple-endpoint.style-scope.yt-formatted-string:hover,#title.ytd-shelf-renderer:hover,#footer.ytd-guide-renderer #guide-links-primary a:hover:not(:last-child), #footer.ytd-guide-renderer #guide-links-secondary a:hover:not(:last-child),yt-formatted-string.style-brand:hover,#channel-title.ytd-channel-renderer:hover,paper-tab.ytd-c4-tabbed-header-renderer:hover,#link-list-container.ytd-channel-about-metadata-renderer yt-formatted-string.ytd-channel-about-metadata-renderer:hover,#title.ytd-grid-channel-renderer:hover,.content-text.style-scope.ytd-metadata-with-image-row-renderer:hover
-  {
+	/*Hover section*/
+	#video-title:hover,#byline.ytd-video-meta-block:hover,#author-text.yt-simple-endpoint.ytd-comment-renderer:hover,ytd-button-renderer #button.ytd-button-renderer:hover,.yt-simple-endpoint.style-scope.yt-formatted-string:hover,#title.ytd-shelf-renderer:hover,#footer.ytd-guide-renderer #guide-links-primary a:hover:not(:last-child), #footer.ytd-guide-renderer #guide-links-secondary a:hover:not(:last-child),yt-formatted-string.style-brand:hover,#channel-title.ytd-channel-renderer:hover,paper-tab.ytd-c4-tabbed-header-renderer:hover,#link-list-container.ytd-channel-about-metadata-renderer yt-formatted-string.ytd-channel-about-metadata-renderer:hover,#title.ytd-grid-channel-renderer:hover,.content-text.style-scope.ytd-metadata-with-image-row-renderer:hover
+	{
 		color: var(--main-color) !important;
 		opacity: 1 !important;
-  }
+	}
   
 	/*Permanently colored*/
 	#byline.ytd-video-meta-block,#author-text.yt-simple-endpoint.ytd-comment-renderer,.yt-simple-endpoint.style-scope.yt-formatted-string,#title.ytd-shelf-renderer,yt-formatted-string.style-brand,#link-list-container.ytd-channel-about-metadata-renderer yt-formatted-string.ytd-channel-about-metadata-renderer
@@ -123,7 +123,7 @@
 		text-shadow: none !important;
 	}
 	
-  /*Avatars and thumbnails opacity */
+	/*Avatars and thumbnails opacity */
 	img.yt-img-shadow 
 	{
 		opacity: 0.9 !important;
@@ -132,106 +132,107 @@
 	{
 		opacity: 1 !important;
 	}
-  /*Video section*/
-  /*Video title hover in html5 video*/
+	
+	/*Video section*/
+	/*Video title hover in html5 video*/
   	.html5-video-player a:hover
   	{
  		color: #fff !important;
 		text-shadow: none !important;
   	}
 
-/* Code takken from https://userstyles.org/styles/95280 */
-/* scrubber button */
-    .html5-scrubber-button:hover, .ytp-chrome-controls .ytp-button[aria-pressed]::after, .ytp-scrubber-button:hover, .ytp-swatch-background-color, .ytp-swatch-background-color-secondary
-  {
-    background: var(--main-color) !important;
-  }
-/* progress bar */
-    .html5-play-progress, .ytp-play-progress
-  {
-    background: var(--main-color) !important;
-  }
+	/* Code takken from https://userstyles.org/styles/95280 */
+	/* scrubber button */
+	.html5-scrubber-button:hover, .ytp-chrome-controls .ytp-button[aria-pressed]::after, .ytp-scrubber-button:hover, .ytp-swatch-background-color, .ytp-swatch-background-color-secondary
+	{
+		background: var(--main-color) !important;
+	}
+	/* progress bar */
+	.html5-play-progress, .ytp-play-progress
+	{
+		background: var(--main-color) !important;
+	}
 
-  .ytp-volume-slider-track, .ytp-volume-slider-handle:before
-  {
-    background: var(--main-color) !important;
-    z-index: -117;
-  }
+	.ytp-volume-slider-track, .ytp-volume-slider-handle:before
+	{
+		background: var(--main-color) !important;
+		z-index: -117;
+	}
 
-  .ytp-settings-button.ytp-hd-quality-badge::after, .ytp-settings-button.ytp-4k-quality-badge::after, .ytp-settings-button.ytp-5k-quality-badge::after, .ytp-settings-button.ytp-8k-quality-badge::after, .ytp-settings-button.ytp-3d-badge::after
-  {
-    background-color: var(--main-color) !important;
-  }
+	.ytp-settings-button.ytp-hd-quality-badge::after, .ytp-settings-button.ytp-4k-quality-badge::after, .ytp-settings-button.ytp-5k-quality-badge::after, .ytp-settings-button.ytp-8k-quality-badge::after, .ytp-settings-button.ytp-3d-badge::after
+	{
+		background-color: var(--main-color) !important;
+	}
 
-  .ytp-swatch-color
-  {
-    color: var(--main-color) !important;
-  }
+	.ytp-swatch-color
+	{
+		color: var(--main-color) !important;
+	}
 
-  .ytp-menuitem[aria-checked="true"] .ytp-menuitem-toggle-checkbox
-  {
-    background: var(--main-color) !important;
-  }
+	.ytp-menuitem[aria-checked="true"] .ytp-menuitem-toggle-checkbox
+	{
+		background: var(--main-color) !important;
+	}
 
-  .ytp-chrome-controls .ytp-button.ytp-youtube-button:hover:not([aria-disabled="true"]):not([disabled]) .ytp-svg-fill-logo-tube-lozenge
-  {
-    fill: var(--main-color) !important;
-  }
+	.ytp-chrome-controls .ytp-button.ytp-youtube-button:hover:not([aria-disabled="true"]):not([disabled]) .ytp-svg-fill-logo-tube-lozenge
+	{
+		fill: var(--main-color) !important;
+	}
 
-  .ytp-cued-thumbnail-overlay:hover .ytp-large-play-button-bg, .ytp-large-play-button.ytp-touch-device .ytp-large-play-button-bg
-  {
-    fill: var(--main-color) !important;
-  }
-/*Added because of this: https://forum.userstyles.org/discussion/53368/solved-fix-this-annoying-youtube-tab-select-bug-thats-been-there-forever#latest*/
-  .ytp-keyboard-focus .ytp-progress-bar:focus
-  {
-    box-shadow: none !important;
-  }
+	.ytp-cued-thumbnail-overlay:hover .ytp-large-play-button-bg, .ytp-large-play-button.ytp-touch-device .ytp-large-play-button-bg
+	{
+		fill: var(--main-color) !important;
+	}
+	/*Added because of this: https://forum.userstyles.org/discussion/53368/solved-fix-this-annoying-youtube-tab-select-bug-thats-been-there-forever#latest*/
+	.ytp-keyboard-focus .ytp-progress-bar:focus
+	{
+		box-shadow: none !important;
+	}
 	
-  /*Changing icon for unavailable video*/
-  #img.ytd-player-error-message-renderer 
-  {
-    display: block !important;
-    -moz-box-sizing: border-box !important;
-    box-sizing: border-box !important;
-    background: url(https://i.imgur.com/2F3NvUl.png) no-repeat !important;
-    width: 140px !important;
-    height: 100px !important;
-    padding-left: 140px !important;
-    position: relative !important;
-  }
-  /*Changing icon for unavailable page (404)*/
-  #error-page-hh-illustration 
-  {
-    display: block !important;
-    -moz-box-sizing: border-box !important;
-    box-sizing: border-box !important;
-    background: url(https://i.imgur.com/2F3NvUl.png) no-repeat !important;
-    width: 140px !important;
-    height: 100px !important;
-    padding-left: 140px !important;
-    right: -175px !important;
-    position: relative !important;
-  }
-  /*Some spacing for the logo*/
-  #yt-masthead #logo-container 
-  {
-    margin-right: 20px !important;
-  }
-/*Playlist changes*/
+  	/*Changing icon for unavailable video*/
+  	#img.ytd-player-error-message-renderer 
+	{
+		display: block !important;
+		-moz-box-sizing: border-box !important;
+		box-sizing: border-box !important;
+		background: url(https://i.imgur.com/2F3NvUl.png) no-repeat !important;
+		width: 140px !important;
+		height: 100px !important;
+		padding-left: 140px !important;
+		position: relative !important;
+	}
+	/*Changing icon for unavailable page (404)*/
+	#error-page-hh-illustration 
+	{
+		display: block !important;
+		-moz-box-sizing: border-box !important;
+		box-sizing: border-box !important;
+		background: url(https://i.imgur.com/2F3NvUl.png) no-repeat !important;
+		width: 140px !important;
+		height: 100px !important;
+		padding-left: 140px !important;
+		right: -175px !important;
+		position: relative !important;
+	}
+	/*Some spacing for the logo*/
+	#yt-masthead #logo-container 
+	{
+		margin-right: 20px !important;
+	}
+	/*Playlist changes*/
 	ytd-playlist-panel-video-renderer:hover 
 	{
-    background-color: #3a3a3a !important;
+		background-color: #3a3a3a !important;
 	}
 
 	ytd-playlist-panel-video-renderer[selected] #index.ytd-playlist-panel-video-renderer,#byline.ytd-playlist-panel-video-renderer,.ytp-video-menu-item[aria-checked="true"] .ytp-video-menu-item-now-playing,.ytp-video-menu-item-author 
 	{
-    color: var(--main-color) !important;
+		color: var(--main-color) !important;
 	}
 
 	.header.ytd-playlist-panel-renderer,.playlist-items.ytd-playlist-panel-renderer 
 	{
-    background-color: #181818 !important;
+		background-color: #181818 !important;
 	}
 	
 	.ytp-video-menu-item[aria-checked="true"] .ytp-video-menu-item-thumbnail
@@ -314,5 +315,41 @@
  	#button:hover 
   	{
   		color: var(--main-color) !important;
-  	}	
+  	}
+
+	/*Cards*/
+	.iv-card-content,.ytp-ce-expanding-overlay-background,.ytp-cards-teaser .ytp-cards-teaser-text
+	{
+		background-color: #181818 !important;
+	}
+	.ytp-cards-teaser .ytp-cards-teaser-box
+	{
+		border-collapse: transparent !important;
+	}
+	.iv-card-content > :first-child,.html5-video-player a,.iv-card h2,.ytp-cards-teaser .ytp-cards-teaser-text
+	{
+		color: #fff !important;
+	}
+	.iv-card:hover .iv-card-primary-link,.ytp-ce-website-title
+	{
+		color: var(--main-color) !important;
+	}
+	.ytp-ce-element:hover 
+	{
+		border-color: var(--main-color) !important;
+	}
+	.ytp-ce-channel-title.ytp-ce-link
+	{
+		color: var(--main-color) !important;
+		opacity: 0.9 !important;
+	}
+	.ytp-ce-channel-title.ytp-ce-link:hover,.ytp-cards-teaser .ytp-cards-teaser-text:hover
+	{
+		color: var(--main-color) !important;
+		opacity: 1 !important;
+	}
+	.ytp-ce-channel-metadata.yt-ui-ellipsis.yt-ui-ellipsis-3 {
+		background: transparent;
+		color: #ccc;
+	}
 }
