--- a/YouTubeDeepDarkMaterial.css
+++ b/YouTubeDeepDarkMaterial.css
@@ -323,9 +323,9 @@
 	{
 		background-color: #181818 !important;
 	}
-	.ytp-cards-teaser .ytp-cards-teaser-box
+	.ytp-cards-teaser .ytp-cards-teaser-box,.iv-card-image
 	{
-		border-collapse: transparent !important;
+		border: 0px !important;
 	}
 	.iv-card-content > :first-child,.html5-video-player a,.iv-card h2,.ytp-cards-teaser .ytp-cards-teaser-text
 	{
